[package]
name = "twitch-cli"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "2.33.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
regex = "1.3.7"
lazy_static = "1.4.0"
futures = "0.3.5"
